--- a/css/style.css
+++ b/css/style.css
@@ -352,19 +352,25 @@ h1 {
     right: 0;
 }
 
-
 /* ANIMATIONS */
-
 
 .skills-category, .education-item, .experience-item {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.skills-category:hover, .education-item:hover, .experience-item:hover {
+.skills-category:hover, .education-item:hover, .experience-item:hover,  {
   transform: translateY(-5px);
   box-shadow: 0 10px 20px rgba(0,0,0,0.1);
 }
 
+#profile {
+    transition: transform 0.3s ease, box-shador 0.3s ease;
+}
+
+#profile:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(61, 184, 168,0.5);
+}
 
 @media (max-width: 768px) {
     .main-container {
