--- a/css/style.css
+++ b/css/style.css
@@ -500,9 +500,10 @@ h1 {
     /*background: rgba(38,38,38, 0.5);*/
     /*background: rgba(46, 46, 46, 0.5);*/
     backdrop-filter: blur(10px);
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-    
+    height: 60px;    
+    box-sizing: border-box;
 }
 
 .main-nav {
@@ -559,6 +560,20 @@ h1 {
 
 .nav-link.active::after {
     width: 100%;
+}
+
+/* MOBILE MENU NAV BAR */
+
+.mobile-menu-toggle {
+    display: none;
+    background: none;
+    border: none;
+    color: var(--text-light);
+    font-size: 1.5rem;
+    cursor: pointer;
+    z-index: 1100;
+    padding: 1rem;
+    margin-left: auto;
 }
 
 #home {
@@ -750,4 +765,73 @@ h1 {
             transform: translateX(calc(-50% - 0.75rem));
         }
     }
+
+    .mobile-menu-toggle {
+        display: block; 
+    }
+
+    .main-header{
+        background: rgba(0, 0, 0, 0.5);
+    }
+
+    .main-nav {
+        display: flex !important;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 70%;
+        height: 100vh;
+        background: rgba(56, 56, 56, 0.9);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        transition: right 0.3s ease;
+        padding: 2rem;
+        z-index: 1000;
+        max-width: 300px;
+        box-shadow: -5px 0 15px rgba(0,0,0,0.3);
+    }
+
+    .main-nav::before {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,1);
+        z-index: -1;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
+
+    .main-nav.active {
+        right: 0;
+    }
+
+    .main-nav.active::before {
+        opacity: 1;
+    }
+    
+    .nav-list {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .nav-icons {
+        margin-left: 0;
+    }
+    
+    
+    #home, #mid-section, #stacks {
+        scroll-margin-top: 60px;
+    }
+    
+    #profile {
+        margin-top: 80px;
+    }
 }
+
+
+
